# EsetVm2

./: .gitignore  CMakeLists.txt  Evm2Header.hpp  cmake-build  cmake-gen
.ccls-cache/@@home@eblxptr@Test_Projects@EsVm2/: @include@c++@8@array.blob  @include@c++@8@backward@binders.h.blob  @include@c++@8@bits@alloc_traits.h.blob  @include@c++@8@bits@allocator.h.blob  @include@c++@8@bits@basic_ios.h.blob  @include@c++@8@bits@basic_ios.tcc.blob  @include@c++@8@bits@basic_string.h.blob  @include@c++@8@bits@basic_string.tcc.blob  @include@c++@8@bits@char_traits.h.blob  @include@c++@8@bits@codecvt.h.blob  @include@c++@8@bits@concept_check.h.blob  @include@c++@8@bits@cpp_type_traits.h.blob  @include@c++@8@bits@cxxabi_forced.h.blob  @include@c++@8@bits@cxxabi_init_exception.h.blob  @include@c++@8@bits@exception.h.blob  @include@c++@8@bits@exception_defines.h.blob  @include@c++@8@bits@exception_ptr.h.blob  @include@c++@8@bits@fstream.tcc.blob  @include@c++@8@bits@functexcept.h.blob  @include@c++@8@bits@functional_hash.h.blob  @include@c++@8@bits@hash_bytes.h.blob  @include@c++@8@bits@ios_base.h.blob  @include@c++@8@bits@istream.tcc.blob  @include@c++@8@bits@locale_classes.h.blob  @include@c++@8@bits@locale_classes.tcc.blob  @include@c++@8@bits@locale_facets.h.blob  @include@c++@8@bits@locale_facets.tcc.blob  @include@c++@8@bits@localefwd.h.blob  (+147 more)
inc/: Cpu.hpp  Decoder.hpp  Evm.hpp  EvmExecutable.hpp  Instruction.hpp  Loader.hpp  Memory.hpp
src/: CMakeLists.txt  Decoder.cpp  Evm.cpp  EvmHeader.hpp  Instruction.cpp  Loader.cpp  main.cpp
tests/: CMakeLists.txt
(+18 files in other folders)
